[package]
name = "lnetm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = [ "derive", "cargo" ] }
env_logger = "0.10.0"
log = "0.4.18"
notify-rust = "4.8.0"
ping-rs = "0.1.2"
