[package]
name = "lnetm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = [ "derive", "cargo" ] }
daemonize = "0.5.0"
dir = "0.1.2"
dirs = "5.0.1"
fastping-rs = "0.2.3"
libc = "0.2.146"
log = "0.4.18"
log4rs = "1.2.0"
notify-rust = "4.8.0"
pretty_env_logger = "0.5.0"
signal-hook = "0.3.15"

[profile.release]
strip = true
opt-level = "z"
let = true
codegen-units = 1
panic = "abort"
